[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cscn"
version = "1.0.0"
description = "Cell-Specific Causal Network (CSCN): inference of cell-specific causal networks from single-cell RNA-seq data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Menghan Wang" },
    { name = "Junya Yang" },
    { name = "Luyao Lyu" },
    { name = "Jiaxing Chen" },
]
keywords = ["single-cell", "RNA-seq", "causal-network", "gene-regulatory-network", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "networkx>=2.6",
    "h5py>=3.1",
    "bitarray>=2.5",
]

[project.optional-dependencies]
# Required only for the optional TF-motif prior workflow (cscn/tf_motif.py).
tf-motif = [
    "biopython>=1.79",
    "pyfaidx>=0.7",
]

[project.scripts]
cscn = "cscn.cli:main"

[project.urls]
Homepage = "https://doi.org/10.1093/bioinformatics/btag480"

[tool.setuptools]
packages = ["cscn"]
